--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,30 +13,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.FruitsFest"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-
+        <activity
+            android:name=".presentation.activities.CatalogActivity"
+            android:exported="true" />
         <activity
             android:name=".presentation.activities.WebViewActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-
-
-
         <activity
             android:name=".presentation.activities.AuthActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity android:name=".presentation.activities.SlotsActivity" />
-
         <activity
             android:name=".presentation.activities.Internet404Activity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-
-
         <activity
             android:name=".presentation.activities.MainActivity"
             android:exported="true">
