--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,25 @@ android {
 
 dependencies {
 
+
+    // appsflyer
+    implementation 'com.appsflyer:af-android-sdk:6.3.2'
+
+    // Code Picker
+    implementation 'com.hbb20:ccp:2.5.4'
+
+    // ProgressBar
+    implementation 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
+
+    // AppMetrica SDK.
+    implementation 'com.yandex.android:mobmetricalib:3.21.0'
+
     implementation 'uk.co.samuelwall:material-tap-target-prompt:3.3.0'
 
+    // One Signal
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
-    implementation 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
+
+    // Phone mask
     implementation 'ru.egslava:MaskedEditText:1.0.5'
     implementation 'org.jetbrains:annotations:15.0'
 
